Added q1 for assignment

--- a/12-10-2021/demo/src/app/app.component.html
+++ b/12-10-2021/demo/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>App component is running</h1>
 <!-- <app-demo></app-demo> -->
+<app-assignment></app-assignment>
 
-<app-login></app-login>
+<!-- <app-login></app-login> -->
