Added bootstrap to the login form

--- a/12-10-2021/demo/src/app/app.component.html
+++ b/12-10-2021/demo/src/app/app.component.html
@@ -3,5 +3,5 @@
 <!-- <app-assignment></app-assignment> -->
 <!-- <app-assignment2></app-assignment2> -->
 <!-- <app-combined-assignment></app-combined-assignment> -->
-<!-- <app-login></app-login> -->
-<app-header></app-header>
+<app-login></app-login>
+<!-- <app-header></app-header> -->
