--- a/12-10-2021/demo/src/app/assignment/assignment.component.html
+++ b/12-10-2021/demo/src/app/assignment/assignment.component.html
@@ -1,24 +1,27 @@
-<h1> Assignment Question 1 </h1>
-
-Employee Details are as follows : <br />
-<table>
-    <th *ngFor="let header of headers">{{header}}</th>
-    <th>Experience</th>
-    <!-- <tr *ngFor="let employee of employees">
-        <td *ngFor="let header of objectKeys(employee)">
-            {{employee[header]}}
-        </td>
-    </tr> -->
-    <tr *ngFor="let employee of employees">
-        <td>{{employee["empId"]}}</td>
-        <td>{{employee["empName"] | gender: employee["gender"] | uppercase}}</td>
-        <td>{{employee["gender"] | lowercase}}</td>
-        <td>{{employee["salary"] | currency: 'INR'}}</td>
-        <td>{{employee["doj"] | date: 'dd-MMMM-yyyy'}}</td> <!-- MM for digit of months, MMM for 3 chars of months, MMMM for complete month name -->
-        <td>{{employee["mobile"] | countryCode: employee["country"]}}</td>
-        <td>{{employee["country"]}}</td>
-        <td>{{employee["loginId"]}}</td>
-        <td>{{employee["password"]}}</td>
-        <td>{{employee["doj"] | expr}}</td> <!-- Refer expr.pipe.ts -->
-    </tr>
-</table>
+<div class=" mx-5 mt-2">
+    <h1> Employee Data </h1>
+    Employee Details are as follows : <br />
+    <table class="table mt-2">
+        <thead class="table-dark">
+            <tr>
+                <th scope="col" *ngFor="let header of headers">{{header}}</th>
+                <th scope="col">Experience</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let employee of employees">
+                <td scope="row">{{employee["empId"]}}</td>
+                <td>{{employee["empName"] | gender: employee["gender"] | uppercase}}</td>
+                <td>{{employee["gender"] | lowercase}}</td>
+                <td>{{employee["salary"] | currency: 'INR'}}</td>
+                <td>{{employee["doj"] | date: 'dd-MMMM-yyyy'}}</td>
+                <!-- MM for digit of months, MMM for 3 chars of months, MMMM for complete month name -->
+                <td>{{employee["mobile"] | countryCode: employee["country"]}}</td>
+                <td>{{employee["country"]}}</td>
+                <td>{{employee["loginId"]}}</td>
+                <td>{{employee["password"]}}</td>
+                <td>{{employee["doj"] | expr}}</td> <!-- Refer expr.pipe.ts -->
+            </tr>
+        </tbody>
+    </table>
+</div>
