--- a/12-10-2021/demo/src/app/app.component.html
+++ b/12-10-2021/demo/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <h1>App component is running</h1> -->
 <!-- <app-demo></app-demo> -->
-<app-assignment></app-assignment>
-<!-- <app-assignment2></app-assignment2> -->
+<!-- <app-assignment></app-assignment> -->
+<app-assignment2></app-assignment2>
 <!-- <app-combined-assignment></app-combined-assignment> -->
 <!-- <app-login></app-login> -->
 <!-- <app-header></app-header> -->
