--- a/12-10-2021/demo/src/app/assignment2/assignment2.component.html
+++ b/12-10-2021/demo/src/app/assignment2/assignment2.component.html
@@ -12,19 +12,19 @@
             required placeholder="Employee Name">
     </div>
 
-    <!-- <div class="form-group col-sm-3">
+    <div class="form-group col-sm-3">
         <label for="exampleGender" class="form-label mt-4">Gender</label>
         <select class="form-select" id="exampleGender" [(ngModel)]='user.gender'>
-            <option [value]="Male">Male</option>
-            <option [value]="Female">Female</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
         </select>
-    </div> -->
+    </div>
 
-    <div class="form-group col-sm-3">
+    <!-- <div class="form-group col-sm-3">
         <label for="exampleInputemployeegender" class="form-label mt-4">Gender</label>
         <input type="text" class="form-control" id="exampleInputemployeegender" [(ngModel)]='user.gender'
             placeholder="Male/Female">
-    </div>
+    </div> -->
 
     <div class="form-group col-sm-3">
         <label for="exampleInputemployeesalary" class="form-label mt-4">Salary</label>
