--- a/12-10-2021/demo/src/app/assignment/assignment.component.html
+++ b/12-10-2021/demo/src/app/assignment/assignment.component.html
@@ -1,7 +1,7 @@
 <div class=" mx-5 mt-2">
     <h1> Employee Data </h1>
     Employee Details are as follows : <br />
-    <table class="table mt-2">
+    <table class="table mt-2 table-striped table-hover">
         <thead class="table-dark">
             <tr>
                 <th scope="col" *ngFor="let header of headers">{{header}}</th>
