Added routing with header page for single page applications:

--- a/12-10-2021/demo/src/app/app.component.html
+++ b/12-10-2021/demo/src/app/app.component.html
@@ -3,5 +3,6 @@
 <!-- <app-assignment></app-assignment> -->
 <!-- <app-assignment2></app-assignment2> -->
 <!-- <app-login></app-login> -->
-<!-- <app-header></app-header> -->
-<app-product></app-product>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<!-- <app-product></app-product> -->
