--- a/12-10-2021/demo/src/app/header/header.component.html
+++ b/12-10-2021/demo/src/app/header/header.component.html
@@ -14,16 +14,16 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Demo</a>
+                    <a class="nav-link" routerLink="login">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Database</a>
+                    <a class="nav-link" routerLink="register">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Registration</a>
+                    <a class="nav-link" routerLink="employees">Employees</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" routerLink="product">Products</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
