--- a/12-10-2021/demo/src/app/login/login.component.html
+++ b/12-10-2021/demo/src/app/login/login.component.html
@@ -18,12 +18,12 @@ Enter password <input type = "password" [(ngModel)] = 'password'><br/>
 <!-- 
     loginId is used in backend while #loginId is used in html
  -->
-<form #loginForm="ngForm" (ngSubmit)="loginSubmit2(loginForm)" novalidate>
+<form #loginForm="ngForm" (ngSubmit)="loginSubmit2(loginForm.value)" novalidate>
     <fieldset class="ms-5">
         <div class="form-group col-sm-3">
             <label for="exampleInputEmail1" class="form-label mt-4">Email</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email"
-                ngModel #email=ngModel required minlength="2" maxlength="10" placeholder="Enter email">
+                ngModel #email=ngModel required minlength="2"placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">
                 <div *ngIf="email.errors?.required && email.touched">Please enter your email</div>
                 <div *ngIf="email.errors?.minlength">Please enter minimum 2 chars in the email</div>
