Added authentication access

--- a/12-10-2021/demo/src/app/hr-page/hr-page.component.html
+++ b/12-10-2021/demo/src/app/hr-page/hr-page.component.html
@@ -1,2 +1,2 @@
-<p>hr-page works!</p>
+<p>Welcome to the HR Page. You can register a new employee to your firm via this portal.</p>
 <a routerLink="./register">Register</a>
