Imported the country info from the API usign service

--- a/12-10-2021/demo/src/app/hr-page/hr-page.component.html
+++ b/12-10-2021/demo/src/app/hr-page/hr-page.component.html
@@ -1,2 +1,3 @@
 <p>Welcome to the HR Page. You can register a new employee to your firm via this portal.</p>
-<a routerLink="./register">Register</a>
+<a routerLink="./register">Register</a><br>
+<a href="/login" ng-click="loginSubmit2()">Logout</a>
